# python-clamd

./: .gitignore  .travis.yml  CHANGES.md  CHANGES.rst  MANIFEST.in  Makefile  README.md  README.rst  README.txt  __init__.py  clamd.py  example.py  pyclamd.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml  tox_tests.yml
clamd/: __init__.py  connection.py
docs/source/: api_reference.rst  conf.py  getting_started.rst  index.rst  installation.rst  usage.rst
examples/: simple_scan.py  stats.py
src/clamd/: __init__.py
src/tests/: test_api.py
tests/: test_api.py
