[tool.poetry]
name = "clammy"
version = "0.1.0"
description = ""
authors = ["ranguli <hello@joshmurphy.ca>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.3"
black = "^19.10b0"
flake8 = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
