[metadata]
name = clamd
version = 0.3.1
author = Alexandre Norman
author-email = norman@xael.org
maintainer = Thomas Grainger
maintainer-email = python-clamd@graingert.co.uk
keywords = python, clamav, antivirus, scanner, virus, libclamav, clamd
summary = Clamd is a python interface to Clamd (Clamav daemon).
description-file = README.txt
home-page = https://github.com/graingert/python-clamd
classifier = License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)

[files]
modules = clamd
extra_files =
    setup.py
    README.txt
