[metadata]
name = clamd
version = 1.0.1
author = Thomas Grainger
author-email = python-clamd@graingert.co.uk
maintainer = Thomas Grainger
maintainer-email = python-clamd@graingert.co.uk
keywords = python, clamav, antivirus, scanner, virus, libclamav, clamd
summary = Clamd is a python interface to Clamd (Clamav daemon).
description-file =
    README.rst
    CHANGES.rst
home-page = https://github.com/graingert/python-clamd
requires-dist =
    setuptools
    six
classifier = License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)

[files]
modules = clamd
extra_files =
    setup.py
    README.rst
    CHANGES.rst

[backwards_compat]
tests-require =
    six
    nose

[test]
test-suite = nose.collector

[nosetests]
with-doctest=1
