[metadata]
author = "Thomas Grainger"
author_email = python-clamd@graingert.co.uk
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = GNU Library or Lesser General Public License (LGPL)
name = clamd
description = "Clamd is a python interface to Clamd (Clamav daemon)."
long_description = file:README.md
long_description_content_type = text/markdown
keywords = python, clamav, antivirus, scanner, virus, libclamav, clamd
project_urls =
    Source Code = https://github.com/graingert/python-clamd
    Change Log = https://github.com/graingert/python-clamd/blob/master/CHANGES.md
url = https://github.com/graingert/python-clamd
version = 1.0.3.dev0

[options]
include_package_data = False
zip_safe = True
package_dir =
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src
exclude =
    src.tests

[bdist_wheel]
universal = 1

[flake8]
max_line_length = 117
